Fix for header style on iOS

--- a/ember_frontend/app/styles/components/header.styl
+++ b/ember_frontend/app/styles/components/header.styl
@@ -28,7 +28,7 @@
 
 body
   header
-    padding 7em 2em 4em 2em
+    padding 7em 0em 4em 0em
     background linear-gradient( left to top, 100% $deep-purple, 0% darken($purple, 30%))
     color $white
     text-align center
@@ -38,6 +38,7 @@ body
       position relative
       z-index 3
       color $white
+      padding 0 2em
       transform translateZ(0)
     &:before
       position absolute
